Updated part of the todo.md. Also updated the client.js to empty the #new-task input field correctly upon click. Also updated some of the css alignment

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -47,6 +47,11 @@ label{
     margin-left: 35px;
 }
 
+td:nth-child(2), td:last-child{
+    color:#36447b;
+    text-align: center;
+}
+
 table{ 
     color: #36447b;
     border: 1.5px solid #36447b;
